--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -25,13 +25,13 @@
 
 // Wine Block
 
-.wine-block {
+.wine-block,
+.wine-block-1 {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    /* justify-content: space-around; */
+    // justify-content: center;
+    justify-content: space-around;
 }
 
 .wine-item {
@@ -51,6 +51,67 @@
     &:hover {
         transform: scale(1.05);
     }
+}
+
+.wine-item-1 {
+    display: flex;
+    text-align: center;
+    // border: 1px solid #ddd;
+    padding: 25px;
+    margin: 10px;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    transition: transform 0.3s ease-in-out;
+
+    .wine-img {
+        margin: auto;
+        width: 200px;
+        /* height: 100px; */
+    }
+
+    &:hover {
+        transform: scale(1.05);
+    }
+}
+
+.slider-carousel {
+    width: 60%;
+    margin: 10px auto;
+    margin-bottom: 0;
+    transition: transform 0.3s ease-in-out;
+}
+
+.slick-slide {
+    margin: 15px;
+}
+
+.item-info {
+    margin-top: 15px;
+}
+
+.arrow {
+    font-size: 28px;
+    position: absolute;
+    cursor: pointer;
+    z-index: 10;
+
+    svg {
+        transition: color 500ms;
+
+        &:hover {
+            color: red;
+        }
+    }
+}
+
+.arrow.next {
+    right: 0%;
+    top: 25%;
+}
+
+.arrow.prev {
+    left: 0%;
+    top: 25%;
 }
 
 // Category Menu
