--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -1,3 +1,8 @@
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
+// FONTS
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Pacifico&display=swap');
 
 @font-face {
@@ -31,33 +36,36 @@
     justify-content: space-between;
     align-items: center;
     padding: 0px 8%;
+
+    .header-nav {
+        transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
+        transition-property: transform, opacity;
+        display: flex;
+        justify-content: space-between;
+
+        .header-nav-items {
+            display: flex;
+
+            .nav-item {
+                position: relative;
+                margin-left: 2rem;
+                padding-top: 2.5rem;
+                padding-bottom: 2.5rem;
+                font-weight: 500;
+                list-style: none;
+                text-transform: uppercase;
+                color: white;
+                font-size: 12px;
+                cursor: pointer;
+                font-family: 'Montserrat', sans-serif;
+            }
+            
+            .nav-item-sign-in span:first-child {
+                margin-right: 15px;
+            }
+        }
+    }
 }
 
-.header-nav {
-    transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
-    transition-property: transform, opacity;
-    display: flex;
-    justify-content: space-between;
-}
 
-.header-nav-items {
-    display: flex;
-}
 
-.nav-item {
-    position: relative;
-    margin-left: 2rem;
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-    font-weight: 500;
-    list-style: none;
-    text-transform: uppercase;
-    color: white;
-    font-size: 12px;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.nav-item-sign-in span:first-child {
-    margin-right: 15px;
-}
