--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -3,74 +3,71 @@
 
 // FONTS
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Pacifico&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Pacifico&display=swap");
 
 @font-face {
-    font-family: 'Ogg';
-    src: url('.././fonts/Ogg/Ogg-Regular-BF646c18fc465e5.ttf')
+  font-family: "Ogg";
+  src: url(".././fonts/Ogg/Ogg-Regular-BF646c18fc465e5.ttf");
 }
 
 @font-face {
-    font-family: 'Neillgates';
-    src: url('../fonts/Neillgates/Neillgates1\ Free.ttf')
+  font-family: "Neillgates";
+  src: url("../fonts/Neillgates/Neillgates1\ Free.ttf");
 }
 
 /* Normilizing css */
 
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
-    outline: none;
-    box-sizing: border-box;
-    font-weight: inherit;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+  outline: none;
+  box-sizing: border-box;
+  font-weight: inherit;
 }
 
 /* HEADER */
 
 .header-wrapper {
-    background-color: #808080;
+  background-color: #808080;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 8%;
+
+  .header-nav {
+    transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
+    transition-property: transform, opacity;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0px 8%;
 
-    .header-nav {
-        transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
-        transition-property: transform, opacity;
-        display: flex;
-        justify-content: space-between;
+    .header-nav-items {
+      display: flex;
 
-        .header-nav-items {
-            display: flex;
+      .nav-item {
+        position: relative;
+        margin-left: 2rem;
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem;
+        font-weight: 500;
+        list-style: none;
+        text-transform: uppercase;
+        font-size: 12px;
+        color: white;
+        cursor: pointer;
+        font-family: "Montserrat", sans-serif;
 
-            .nav-item {
-                position: relative;
-                margin-left: 2rem;
-                padding-top: 2.5rem;
-                padding-bottom: 2.5rem;
-                font-weight: 500;
-                list-style: none;
-                text-transform: uppercase;
-                font-size: 12px;
-                color: white;
-                cursor: pointer;
-                font-family: 'Montserrat', sans-serif;
-                
-                a {
-                    color: white;
-                    text-decoration: none;
-                }
-            }
-            
-            .nav-item-sign-in span:first-child {
-                margin-right: 15px;
-            }
+        a {
+          color: white;
+          text-decoration: none;
         }
+      }
+
+      .nav-item-sign-in span:first-child {
+        margin-right: 15px;
+      }
     }
+  }
 }
-
-
-
