--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -81,12 +81,12 @@
     transition: transform 0.3s ease-in-out;
 
     .slick-list {
-        height: 600px;
+        height: 400px;
     }
 }
 
 .slick-slide {
-    margin: 15px;
+    // margin: 15px;
 }
 
 .item-info {
