--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -36,6 +36,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 8%;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
 
   .header-nav {
     transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
