--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -1,8 +1,9 @@
 .shop-wrapper {
   padding: 0px 8%;
+  padding: 6em;
 
   .header {
-    padding-top: 4em;
+    padding-top: 2em;
     padding-bottom: 2em;
 
     .breadcrumb {
