--- a/src/styles/shopItem.scss
+++ b/src/styles/shopItem.scss
@@ -60,7 +60,7 @@
 
     .btnContainer {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       align-items: center;
       gap: 1em;
 
