Home page adjustments (updating carousel logic)

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -79,13 +79,13 @@
   transition: transform 0.3s ease-in-out;
 
     .slick-list {
-        height: 600px;
+        height: 400px;
     }
 }
 
-.slick-slide {
-    margin: 15px;
-}
+// .slick-slide {
+//     margin: 15px;
+// }
 
 .item-info {
   margin-top: 15px;
