--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -40,6 +40,13 @@
   width: 100%;
   top: 0;
   z-index: 100;
+  
+  .header-logo {
+    color: white;
+    font-family: "Ogg", serif;
+    white-space: pre-line;
+    cursor: pointer;
+  }
 
   .header-nav {
     transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
