--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,22 +1,33 @@
 // HOME PAGE
+.home-page-wrapper {
+  position: relative;
 
-.page-banner {
-  margin: 250px 0 60px;
-  text-align: center;
+  .page-banner {
+    width: fit-content;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 
-  span {
-    font-family: "Ogg", sans-serif;
-    font-size: 78px;
-    text-transform: uppercase;
-    font-weight: 500;
-  }
+    span {
+      font-family: "Ogg", sans-serif;
+      font-size: 80px;
+      text-transform: uppercase;
+      font-weight: 500;
+      cursor: pointer;
+    }
 
-  p {
-    font-family: "Neillgates", sans-serif;
-    text-align: right;
-    padding-right: 210px;
-    font-size: 38px;
-    transform: rotate(-5deg);
+    p {
+      font-family: "Neillgates", sans-serif;
+      position: absolute;
+      bottom: 280px;
+      right: 270px;
+      font-size: 50px;
+      transform: rotate(-5deg);
+    }
   }
 }
 
