--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -31,12 +31,13 @@
 /* HEADER */
 
 .header-wrapper {
-  background-color: #808080;
+  // background-color: #808080;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0px 8%;
-  position: fixed;
+  // position: fixed;
+  position: absolute;
   width: 100%;
   top: 0;
   z-index: 100;
