--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -15,6 +15,23 @@
   src: url("../fonts/Neillgates/Neillgates1\ Free.ttf");
 }
 
+// new fonts
+
+@font-face {
+  font-family: "Indira";
+  src: url("../fonts/indira-k/Indira_K.ttf");
+}
+
+@font-face {
+  font-family: "Aquifer";
+  src: url("../fonts/aquifer/Aquifer.ttf");
+}
+
+@font-face {
+  font-family: "CaslonAntique";
+  src: url("../fonts/caslon-antique/CaslonAntique.ttf");
+}
+
 /* Normilizing css */
 
 * {
@@ -31,7 +48,6 @@
 /* HEADER */
 
 .header-wrapper {
-  // background-color: #808080;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,10 +59,11 @@
   z-index: 100;
   
   .header-logo {
-    color: white;
-    font-family: "Ogg", serif;
-    white-space: pre-line;
     cursor: pointer;
+  }
+  
+  .logo-header {
+    width: 110px;
   }
 
   .header-nav {
@@ -57,8 +74,6 @@
 
     .header-nav-items {
       display: flex;
-
-      
 
       .nav-item {
         cursor: pointer;
