--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -2,12 +2,12 @@
     position: absolute;
     opacity: 0;
     width: 100%;
-    transform: translateY(20px);
+    // transform: translateY(20px);
 }
 
 .fade-enter-active {
     opacity: 1;
-    transform: translateY(0);
+    // transform: translateY(0);
     transition: opacity 1s, transform 1s, all 1s;
 }
 
@@ -15,11 +15,11 @@
     position: absolute;
     opacity: 1;
     width: 100%;
-    transform: translateY(0);
+    // transform: translateY(0);
 }
 
 .fade-exit-active {
     opacity: 0;
-    transform: translateY(20px);
+    // transform: translateY(20px);
     transition: opacity 1s, transform 1s, all 1s;
 }
