--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -52,19 +52,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 8%;
-  // position: fixed;
   position: absolute;
   width: 100%;
   top: 0;
   z-index: 100;
-  
-  .header-logo {
-    cursor: pointer;
-  }
-  
-  .logo-header {
-    width: 110px;
-  }
 
   .header-nav {
     transition: none 0.5s cubic-bezier(0.85, 0, 0.3, 1);
@@ -126,4 +117,29 @@
       }
     }
   }
+}
+
+.header-logo {
+  cursor: pointer;
+}
+
+.logo-header {
+  width: 110px;
+}
+
+// FOOTER
+
+.footer-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+  width: 100%;
+  // position: absolute;
+  color: rgb(212, 212, 212);
+  font-family: "Aquifer", sans-serif;
+  background-image: url(../img/wine-cellar.png);
+  background-position: bottom;
+  // background-size: cover;
+  // background-color: #181B2B;
 }
