--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -1,14 +1,41 @@
 .shop-wrapper {
-  padding: 0px 8%;
-  padding: 6em;
+  position: relative;
+  padding: 6em 8%;
+  overflow: hidden;
+  font-family: 'CaslonAntique', sans-serif;
+  color: rgb(212, 212, 212);
+
+  .background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    scale: 1.1;
+    background-image: url(../img/common-background.png);
+    background-size: cover;
+    z-index: -1;
+
+    .background-overlay {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(20, 23, 36, 0.393);
+    }
+  }
 
   .header {
     padding-top: 2em;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
+    z-index: 100;
 
     .breadcrumb {
       display: flex;
       gap: 0.5em;
+      font-size: 1.50em;
+    }
+
+    h1 {
+      font-size: 3.5em;
     }
   }
 
@@ -18,7 +45,7 @@
   }
 
   a {
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     &:hover {
       text-decoration: underline;
@@ -27,19 +54,17 @@
 }
 
 .shop-container {
-  // border: 1px solid red;
   display: flex;
 
   .shop-aside {
-    // border: 1px solid green;
     width: 25%;
-    height: 100vh;
 
     .sort {
       overflow-y: hidden;
       border-bottom: 1px solid lightgray;
       transition: height 0.3s ease;
       height: 50px;
+      transition: all 0.3s ease-in-out;
 
       &.expanded {
         height: auto;
@@ -84,6 +109,7 @@
     text-align: center;
     margin-bottom: 1em;
     cursor: pointer;
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%);
     transition: scale 0.2s ease-in-out;
 
     h3 {
@@ -102,7 +128,11 @@
     }
 
     img {
-      width: 15.625em;
+      // width: 15.625em;
+      height: 15.625em;
+      // object-fit: cover;
+      object-position: center;
+      border-radius: 0.5em;
     }
 
     .info {
