--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -59,7 +59,8 @@
   .shop-aside {
     width: 25%;
 
-    .sort {
+    .sort,
+    .filter {
       overflow-y: hidden;
       border-bottom: 1px solid lightgray;
       transition: height 0.3s ease;
