--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -1,4 +1,5 @@
 .shop-wrapper {
+  display: flex;
   position: relative;
   padding: 6em 8%;
   overflow: hidden;
@@ -31,16 +32,15 @@
     .breadcrumb {
       display: flex;
       gap: 0.5em;
-      font-size: 1.50em;
+      font-size: 1.70em;
     }
 
     h1 {
-      font-size: 3.5em;
+      font-size: 3.6em;
     }
   }
 
   .title {
-    font-size: 3em;
     padding-top: 0.5em;
   }
 
@@ -54,21 +54,23 @@
 }
 
 .shop-container {
-  display: flex;
+  width: 20rem;
 
   .shop-aside {
-    width: 25%;
+    display: flex;
+    flex-direction: column;
 
     .sort,
     .filter {
       overflow-y: hidden;
+      font-family: 'CaslonAntique', sans-serif;
       border-bottom: 1px solid lightgray;
       transition: height 0.3s ease;
       height: 50px;
       transition: all 0.3s ease-in-out;
 
       &.expanded {
-        height: auto;
+        height: 250px;
       }
 
       header {
@@ -79,105 +81,109 @@
         padding: 0.75em 0;
 
         h3 {
-          font-size: 1.15em;
-          font-weight: 600;
+          font-size: 1.4em;
           user-select: none;
         }
       }
     }
   }
+}
 
-  .shop-main {
-    display: flex;
-    flex: 1;
-    padding: 0 1em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.sort-block {
+  font-family: 'CaslonAntique', sans-serif;
+}
+
+.shop-main {
+  display: flex;
+  flex: 1;
+  padding: 0 1em;
+  margin-top: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.sample-card {
+  width: 32%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.75em;
+  padding: 1em;
+  border-radius: 0.5em;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  margin-bottom: 1em;
+  cursor: pointer;
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%);
+  transition: scale 0.2s ease-in-out;
+
+  h3 {
+    font-size: 1.25em;
   }
 
-  .sample-card {
-    width: 32%;
+  &:hover {
+    outline: auto;
+    scale: 102%;
+    box-shadow: 1px 1px 5px gray;
+
+    h4,
+    h3 {
+      text-decoration: underline;
+    }
+  }
+
+  img {
+    // width: 15.625em;
+    height: 15.625em;
+    // object-fit: cover;
+    object-position: center;
+    border-radius: 0.5em;
+  }
+
+  .info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.75em;
-    padding: 1em;
-    border-radius: 0.5em;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    margin-bottom: 1em;
+    gap: 0.5em;
+  }
+
+  .heart {
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    color: red;
     cursor: pointer;
-    background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%);
-    transition: scale 0.2s ease-in-out;
+  }
 
-    h3 {
-      font-size: 1.25em;
-    }
+  .add-container {
+    display: flex;
+    gap: 0.5em;
+    width: 60%;
+    height: 2.5em;
 
-    &:hover {
-      outline: auto;
-      scale: 102%;
-      box-shadow: 1px 1px 5px gray;
-
-      h4,
-      h3 {
-        text-decoration: underline;
-      }
-    }
-
-    img {
-      // width: 15.625em;
-      height: 15.625em;
-      // object-fit: cover;
-      object-position: center;
+    input {
+      flex: 1;
+      width: 50%;
+      text-align: center;
       border-radius: 0.5em;
+      border: 1px solid lightgray;
     }
 
-    .info {
+    button {
+      flex: 1;
+      background-color: lightgray;
+      border-radius: 0.5em;
       display: flex;
-      flex-direction: column;
       gap: 0.5em;
-    }
-
-    .heart {
-      position: absolute;
-      right: 1em;
-      top: 1em;
-      color: red;
+      justify-content: center;
+      align-items: center;
       cursor: pointer;
-    }
+      transition: background-color 0.3s ease;
 
-    .add-container {
-      display: flex;
-      gap: 0.5em;
-      width: 60%;
-      height: 2.5em;
-
-      input {
-        flex: 1;
-        width: 50%;
-        text-align: center;
-        border-radius: 0.5em;
-        border: 1px solid lightgray;
-      }
-
-      button {
-        flex: 1;
-        background-color: lightgray;
-        border-radius: 0.5em;
-        display: flex;
-        gap: 0.5em;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-
-        &:hover {
-          background-color: #808080;
-        }
+      &:hover {
+        background-color: #808080;
       }
     }
   }
