--- a/src/pages/Home/Homepage.scss
+++ b/src/pages/Home/Homepage.scss
@@ -1,7 +1,7 @@
 // HOME PAGE
 
 .home-page-layout {
-  background-image: url(../img/wine-cellar2.png);
+  background-image: url(../../img/wine-cellar2.png);
   background-position: bottom;
   // background-repeat: no-repeat;
   // background-size: cover;
@@ -9,7 +9,7 @@
 
 .home-page-wrapper {
   position: relative;
-  background-image: url(../img/main-page-banner2.png);
+  background-image: url(../../img/main-page-banner2.png);
   background-position: bottom;
   background-size: cover;
 
@@ -91,6 +91,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   // border: 1px solid #ddd;
   padding: 25px;
   margin: 10px;
