--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -2,10 +2,15 @@
   display: flex;
   position: relative;
   padding: 6em 8%; 
+  min-height: 100vh;
   // overflow: hidden;
   overflow-x: hidden;
   font-family: 'CaslonAntique', sans-serif;
   color: rgb(212, 212, 212);
+
+  .control-block {
+    width: 23%;
+  }
 
   .background {
     position: fixed;
@@ -14,7 +19,7 @@
     width: 100%;
     height: 100vh;
     scale: 1.1;
-    background-image: url(../img/common-background.png);
+    background-image: url(../../img/common-background.png);
     background-size: cover;
     z-index: -1;
 
@@ -55,7 +60,7 @@
 }
 
 .shop-container {
-  width: 20rem;
+  // width: 20rem;
 
   .shop-aside {
     display: flex;
@@ -70,6 +75,7 @@
       transition: all 0.3s ease-in-out;
 
       &.expanded {
+        padding-left: 10px;
         height: 250px;
       }
 
@@ -93,14 +99,27 @@
   display: flex;
   flex: 1;
   padding: 0 1em;
-  margin-top: 1em;
+  margin-top: 1.5em;
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
+
+  .wine-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 1.5em;
+  }
+
+  hr {
+    // height: 1px;
+    border: white 1px solid;
+    color: white;
+    // color: rgba(18, 21, 40, 0.8);
+  }
 }
 
 .sample-card {
-  width: 32%;
+  width: 230px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -188,7 +207,6 @@
 .no-products-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100%;
   font-size: 2em;
 }
@@ -196,9 +214,10 @@
 .sort-dropdown-menu {
   display: flex;
   width: 100%;
-  align-items: center;
+  align-items: baseline;
 
   span {
     margin-right: 15px;
+    font-size: 24px;
   }
 }
