--- a/src/pages/shopItem/ShopItem.scss
+++ b/src/pages/shopItem/ShopItem.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding: 0px 8%;
   padding: 6em;
+  height: 100vh;
 
   header {
     padding: 2em 0;
@@ -40,7 +41,7 @@
     width: 40%;
 
     img {
-      width: 100%;
+      width: 80%;
       height: auto;
     }
   }
