Adjusting data.js placeholder object with new properties + adding new filters to Shop.jsx

--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -68,7 +68,8 @@
 
     .sort,
     .filter,
-    .price {
+    .price,
+    .country {
       overflow-y: hidden;
       border-bottom: 1px solid lightgray;
       transition: max-height 0.3s ease;
