--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -69,7 +69,8 @@
     .sort,
     .filter,
     .price,
-    .country {
+    .country,
+    .grape-variety {
       overflow-y: hidden;
       border-bottom: 1px solid lightgray;
       transition: max-height 0.3s ease;
@@ -79,7 +80,7 @@
       &.expanded {
         padding-left: 10px;
         padding-bottom: 15px;
-        max-height: 400px;
+        max-height: 1000px;
       }
 
       header {
@@ -120,13 +121,14 @@
   flex: 1;
   padding: 0 1em;
   margin-top: 1.5em;
-  display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: start;
 
   .wine-cards-container {
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
     margin-top: 1.5em;
   }
 
@@ -233,7 +235,7 @@
 
 .sort-dropdown-menu {
   display: flex;
-  width: 100%;
+  // width: 100%;
   align-items: baseline;
 
   span {
