--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -71,7 +71,8 @@
     .price,
     .country,
     .grape-variety,
-    .taste-category {
+    .taste-category,
+    .food-pairing {
       overflow-y: hidden;
       border-bottom: 1px solid lightgray;
       transition: max-height 0.3s ease;
