Working on search logic + changing styles

--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -72,7 +72,8 @@
     .country,
     .grape-variety,
     .taste-category,
-    .food-pairing {
+    .food-pairing,
+    .year {
       overflow-y: hidden;
       border-bottom: 1px solid lightgray;
       transition: max-height 0.3s ease;
@@ -127,6 +128,12 @@
   flex-wrap: wrap;
   justify-content: start;
 
+  .sort-search-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .wine-cards-container {
     display: flex;
     flex-wrap: wrap;
@@ -140,6 +147,38 @@
     color: white;
     // color: rgba(18, 21, 40, 0.8);
   }
+}
+
+.search-section {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+
+  span {
+    font-size: 24px;
+  }
+  
+  input {
+    flex: 1;
+    width: 250px;
+    font-size: 20px;  
+    padding: 12px;
+    border-radius: 5px;
+    border: 1px solid lightgray;
+  }
+  
+  button {
+    display: flex;
+    background-color: transparent;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+  }
+}
+
+.search-request {
+  margin-top: 15px;
+  font-size: 22px;
 }
 
 .sample-card {
@@ -231,7 +270,9 @@
 .no-products-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 100vh;
   font-size: 2em;
 }
 
