--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -162,7 +162,7 @@
     flex: 1;
     width: 250px;
     font-size: 20px;  
-    padding: 12px;
+    padding: 10px;
     border-radius: 5px;
     border: 1px solid lightgray;
   }
@@ -181,53 +181,19 @@
   font-size: 22px;
 }
 
-.sample-card {
-  width: 230px;
+.wine-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.75em;
+  width: 230px;
   padding: 1em;
-  border-radius: 0.5em;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  margin-bottom: 1em;
-  cursor: pointer;
-  background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 70%);
+  background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 50%);
   transition: scale, 0.2s ease-in-out;
 
-  h3 {
-    font-size: 1.25em;
-  }
-
   &:hover {
-    // outline: auto;
     scale: 102%;
     background-color: rgba(97, 97, 97, 0.312);
-  }
-
-  img {
-    // width: 15.625em;
-    height: 15.625em;
-    // object-fit: cover;
-    object-position: center;
-    border-radius: 0.5em;
-  }
-
-  .info {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-  }
-
-  .heart {
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    color: red;
-    cursor: pointer;
   }
 
   .add-container {
@@ -258,6 +224,66 @@
       &:hover {
         background-color: #808080;
       }
+    }
+  }
+
+  .sample-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75em;
+    border-radius: 0.5em;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    margin-bottom: 1em;
+    cursor: pointer;
+  
+    h3 {
+      font-size: 1.25em;
+    }
+  
+    img {
+      // width: 15.625em;
+      height: 15.625em;
+      // object-fit: cover;
+      object-position: center;
+      border-radius: 0.5em;
+    }
+  
+    .info {
+      display: flex;
+      flex-direction: column;
+      // height: 130px;
+
+    .info-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+    }
+
+      h3 {
+        display: flex;
+        width: 180px;
+        height: 50px;
+      }
+      
+      h4 {
+        display: flex;
+        gap: 0.5em;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  
+    .heart {
+      position: absolute;
+      right: 1em;
+      top: 1em;
+      color: red;
+      cursor: pointer;
     }
   }
 }
