--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -15,15 +15,17 @@
   border: 25px solid rgb(34, 36, 47);
   padding: 5px;
   opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
-    visibility 0.3s ease-in-out;
+  // visibility: hidden;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .search-container.open {
   opacity: 1;
-  visibility: visible;
-  transform: translateX(-50%) translateY(0);
+  // visibility: visible;
+  transform: translate(-50%, 0);
+  // transition: all 0.3s ease-in-out;
+  pointer-events: all;
 }
 
 .search-container input {
@@ -37,9 +39,15 @@
   display: flex;
   background-color: white;
   padding: 10px 15px;
-  border-radius: 15px;
+  border-radius: 25px;
   font-size: 18px;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.search-container button:last-child:hover {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
 }
 
 .overlay {
@@ -51,13 +59,13 @@
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 99;
   opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .overlay.visible {
   opacity: 1;
-  visibility: visible;
+  pointer-events: all;
 }
 
 .icon-badge {
@@ -67,17 +75,19 @@
 
 .badge {
   position: absolute;
+  z-index: 99;
   top: 50px;
   right: -2px;
-  background: red;
+  background: rgb(78, 37, 214);
   color: white;
   font-size: 12px;
   font-weight: bold;
   border-radius: 50%;
-  width: 15px;
-  height: 15px;
+  width: 18px;
+  height: 18px;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
