--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -187,6 +187,7 @@
   justify-content: center;
   align-items: center;
   width: 230px;
+  position: relative;
   padding: 1em;
   background: radial-gradient(
     circle,
@@ -202,32 +203,49 @@
 
   .add-container {
     display: flex;
-    gap: 0.5em;
+    align-items: center;
+    gap: 0.8em;
     width: 60%;
     height: 2.5em;
+    // outline: none;
+    cursor: pointer;
 
     input {
-      flex: 1;
-      width: 50%;
+      // flex: 1;
+      // width: 50%;
+      cursor: pointer;
+      font-family: "CaslonAntique";
+      color: rgb(211, 211, 211);
       text-align: center;
-      border-radius: 0.5em;
       border: 1px solid lightgray;
     }
 
     button {
-      flex: 1;
-      background-color: lightgray;
-      border-radius: 0.5em;
-      display: flex;
-      gap: 0.5em;
-      justify-content: center;
-      align-items: center;
+      // flex: 1;
+      // background-color: lightgray;
+      // border-radius: none;
+      // display: flex;
+      // gap: 0.5em;
+      // justify-content: center;
+      // align-items: center;
       cursor: pointer;
       transition: background-color 0.3s ease;
 
       &:hover {
         background-color: #808080;
       }
+    }
+  }
+
+  .favorites {
+    position: absolute;
+    z-index: 99;
+    right: 15px;
+    top: 15px;
+
+    .heart {
+      color: red;
+      cursor: pointer;
     }
   }
 
@@ -246,11 +264,13 @@
 
     h3 {
       font-size: 1.25em;
+      user-select: none;
     }
 
     img {
       // width: 15.625em;
       height: 15.625em;
+      user-select: none;
       // object-fit: cover;
       object-position: center;
       border-radius: 0.5em;
@@ -283,7 +303,7 @@
       }
 
       h3 {
-        height: 55px;
+        height: 60px;
         text-align: left;
         font-size: 24px;
         display: -webkit-box;
@@ -299,19 +319,6 @@
         color: rgb(184, 184, 184);
       }
     }
-
-    .favorites {
-      // position: relative;
-      // position: absolute;
-      // right: 0;
-      // top: 0;
-
-      .heart {
-        color: red;
-        cursor: pointer;
-      }
-    }
-
   }
 }
 
