--- a/src/styles/main-style.scss
+++ b/src/styles/main-style.scss
@@ -43,6 +43,9 @@
   outline: none;
   box-sizing: border-box;
   font-weight: inherit;
+  scroll-behavior: smooth;
+
+  // transition: all 0.3s ease-in-out;
 }
 
 /* HEADER */
@@ -65,6 +68,7 @@
 
     .header-nav-items {
       display: flex;
+      align-items: center;
 
       .nav-item {
         cursor: pointer;
